M       cat_tst_calc_kappa.m
M       cat_vol_partvol.m

Fixed*:    Corrected APP1 WMth estimation error for low value longitudinal data.
Fixed*:    Corrected problems with to strong WMHC in images with low resolution,
           high noise and increase neutral zone around the basal ganglia.
Fixed:     Skull-striping warnings in low resolution images.
Fixed:     Corrected error in GUI resolution variable.
Fixed:     Corrected error in cat_io_xml.
Fixed:     Deactivated spm_DATE.ps output in case of error.
Changed*:  Updated cleanup Function.
Changed*:  Added initial noise correction.
Changed:   Added possible output variable to cat_stat_check_cov.
Changed:   Modified brain mask threshold to include CSF in cat_tst_calc_kappa.

------------------------------------------------------------------------
r923 | dahnke | 2016-04-13 15:35:13 +0200 (Mi, 13 Apr 2016) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_run_job.m

Fixed:    Corrected small errors by wrong data-type due to noise-correction.

------------------------------------------------------------------------
r924 | dahnke | 2016-04-13 17:38:28 +0200 (Mi, 13 Apr 2016) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_defaults.m
M       cat_io_writenii.m
M       cat_main.m
M       cat_main_LAS.m
M       cat_run.m

Fixed:    Corrected small error and warnings unter Windows and Linux.


------------------------------------------------------------------------
r925 | dahnke | 2016-04-13 17:52:20 +0200 (Mi, 13 Apr 2016) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m

Fixed:    Corrected writing of rigid and affine output.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_run_job_APP_init.m

Fixed*:    Corrected initial APP for small (negative) values.
New*:      APP for longitudinal pipeline.

------------------------------------------------------------------------
r926 | dahnke | 2016-04-14 16:15:55